# iomomi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DownloadTextures.sh  InitialBuild.sh  MakeGCH.sh  PrepareBuild.sh  README.md  TODO.txt  Todo.txt  index.html
Assets/: Assets.yaml  Attributions.txt
Assets/Decals/: Arrow.yaml  RampEdge.yaml  Stain0.yaml  Stain1.yaml  Stain2.yaml  Target.yaml  WarningDecal.yaml
Assets/Materials/: ActivationStrip.yaml  BrokenFrame.yaml  Button.yaml  Cube.yaml  CubeSpawner.yaml  Default.yaml  Entrance.yaml  Grating2.yaml  GravityBarrierBorder.yaml  GravityCorner.yaml  GravityGunMain.yaml  GravityGunMainA.yaml  GravityGunMid.yaml  GravitySwitch.yaml  Ladder.yaml  Pipe1.yaml  Pipe2.yaml  PipeCenter.yaml  PipeRing.yaml  Platform.yaml  PlatformSlider.yaml  Pump.yaml  Railing.yaml  Ramp.yaml  WoodCube.yaml
Assets/Models/: ActivationStripStraight.mtl  BrokenFrame.aa.glb  Button.mtl  Cube.mtl  CubeSpawner.mtl  Door.col.glb  Door.glb  EnterExitEditor.blend  EnterRoom.blend  EnterRoom.mtl  GravityBarrierBorder.mtl  GravityCornerConvex.blend  GravityGun.mtl  GravitySwitch.blend  GravitySwitch.mtl  Ladder.mtl  PushButton.mtl  Railing.mtl  RailingCenter.mtl  RailingCol.mtl  WallLight.blend
Assets/Particles/: BlueOrb.ype
Assets/Shaders/: Ambient.fs.glsl  Blur.fs.glsl  BlurredGlass.fs.glsl  Common3D-PCTransform.vs.glsl  Common3D-PLShadow.vs.glsl  Common3D-PlanarRefl.vs.glsl  Common3D.vs.glsl  ConstantAmbient.fs.glsl  Decal.fs.glsl  Decal.vs.glsl  EdSelection.fs.glsl  EdSelection.vs.glsl  EdSelectionPost.fs.glsl  Emissive.fs.glsl  Emissive.vs.glsl  EmissiveGeom.fs.glsl  ForceField.fs.glsl  ForceField.glh  ForceField.vs.glsl  GlassBlur.fs.glsl  GooPlane-Emissive.fs.glsl  GooPlane.fs.glsl  GooPlane.vs.glsl  GravityBarrier.fs.glsl  GravityBarrier.vs.glsl  GravityCorner-Editor.fs.glsl  GravityCorner.fs.glsl  GravityCornerLight.fs.glsl  GravityGun.fs.glsl  GravityGun.vs.glsl  GravityGunMid.fs.glsl  GravityIndicator.fs.glsl  GravityIndicator.vs.glsl  GravitySwitch.fs.glsl  GravitySwitchLight.fs.glsl  GravitySwitchVolLight.fs.glsl  GravitySwitchVolLight.vs.glsl  ImGui.fs.glsl  ImGui.vs.glsl  LightStrip.fs.glsl  (+36 more)
Assets/Textures/: EntityIcons.xcf
Inc/: Common.hpp  ImGuiConfig.hpp  magic_enum.hpp
Levels/: button_0.gwd  button_1.gwd  button_2.gwd  button_3.gwd  cubeflip_0.gwd  cubeflip_2.gwd  extra_0.gwd  forcefield_1.gwd  forcefield_2.gwd  forcefield_3.gwd  forcefield_4.gwd  forcefield_5.gwd  forcefield_6.gwd  forcefield_new.gwd  graph.txt  graph.yaml  gravbarrier_0.gwd  gravbarrier_1.gwd  gravbarrier_2.gwd  gravbarrier_3.gwd  gravbarrier_4.gwd  gravbarrier_5.gwd  gravbarrier_6.gwd  gravbarrier_7.gwd  gravbarrier_cube_2.gwd  gravbarrier_cube_3.gwd  gravbarrier_intro1.gwd  gravbarrier_new.gwd  gravbarrier_ng0.gwd  gravbarrier_ng1.gwd  gravbarrier_ng2.gwd  gravbarrier_ng3.gwd  gravbarrier_ng4.gwd  gravbarrier_ng5.gwd  gravbarrier_ng6.gwd  gravbarrier_ng7.gwd  gravgun_0.gwd  gravgun_1.gwd  gravgun_2.gwd  gravgun_3.gwd  (+50 more)
Protobuf/: Activator.proto  ColliderEntity.proto  CubeEntity.proto  CubeSpawnerEntity.proto  DecalEntity.proto  Dir.proto  EntranceEntity.proto  FloorButtonEntity.proto  ForceFieldEntity.proto  GateEntity.proto  GooPlaneEntity.proto  GravityBarrierEntity.proto  GravitySwitchEntity.proto  LadderEntity.proto  Makefile  MeshEntity.proto  PlatformEntity.proto  PointLightEntity.proto  PumpEntity.proto  PushButtonEntity.proto  Ramp.proto  SlidingWallEntity.proto  Vec.proto  WallLightEntity.proto  WaterPlaneEntity.proto  WaterWallEntity.proto  WindowEntity.proto  World.proto
Shaders/: ImGui.fs.glsl  ImGui.vs.glsl  Makefile
Src/: AudioPlayers.cpp  AudioPlayers.hpp  Clipping.cpp  Clipping.hpp  FileUtils.cpp  FileUtils.hpp  Game.cpp  Game.hpp  GameRenderer.cpp  GameRenderer.hpp  GameState.cpp  GameState.hpp  ImGui.cpp  ImGui.hpp  ImGuiInterface.cpp  ImGuiInterface.hpp  InputState.cpp  InputState.hpp  Levels.cpp  Levels.hpp  LevelsDesktop.cpp  LevelsWeb.cpp  Main.cpp  MainGameState.cpp  MainGameState.hpp  MainMenuGameState.cpp  MainMenuGameState.hpp  PCH.hpp  ProtobufUtils.hpp  Rectangle.cpp  Rectangle.hpp  Settings.cpp  Settings.hpp  Span.hpp  ThumbnailRenderer.cpp  ThumbnailRenderer.hpp  Utils.cpp  Utils.hpp  Vec3Compare.hpp  Water.cpp  (+4 more)
Src/Editor/: Editor.cpp  Editor.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorComponent.cpp  EditorComponent.hpp  EditorGraphics.hpp  EditorWorld.cpp  EditorWorld.hpp  EntityWallDragHelper.cpp  EntityWallDragHelper.hpp  IPrimitiveRenderer.hpp  LiquidPlaneRenderer.cpp  LiquidPlaneRenderer.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  SelectionRenderer.cpp  SelectionRenderer.hpp
Src/Graphics/: BlurRenderer.cpp  BlurRenderer.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  GlassBlurRenderer.cpp  GlassBlurRenderer.hpp  Graphics.hpp  GraphicsCommon.cpp  GraphicsCommon.hpp  GravityGunRenderer.cpp  GravityGunRenderer.hpp  Mesh.cpp  Mesh.hpp  ObjectRenderer.cpp  ObjectRenderer.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.hpp  PlanarReflectionsManager.cpp  PlanarReflectionsManager.hpp  PostProcessor.cpp  PostProcessor.hpp  QualityLevel.cpp  QualityLevel.hpp  RenderContext.hpp  RenderSettings.cpp  RenderSettings.hpp  RenderTargets.cpp  RenderTargets.hpp  RenderTex.cpp  RenderTex.hpp  Renderer.cpp  Renderer.hpp  SSAO.cpp  SSAO.hpp  SSR.cpp  SSR.hpp  ScreenSpaceReflections.cpp  ScreenSpaceReflections.hpp  (+10 more)
Src/Gui/: GuiCommon.cpp  GuiCommon.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PausedMenu.cpp  PausedMenu.hpp  Scroll.cpp  Scroll.hpp
Src/Water/: WaterBarrierRenderer.cpp  WaterBarrierRenderer.hpp  WaterCollisionData.cpp  WaterCollisionData.hpp  WaterConstants.hpp  WaterGenerate.cpp  WaterGenerate.hpp  WaterQuery.hpp  WaterRenderer.cpp  WaterRenderer.hpp  WaterSimulationShaders.cpp  WaterSimulationShaders.hpp  WaterSimulationThread.cpp  WaterSimulationThread.hpp  WaterSimulator.cpp  WaterSimulator.hpp  WaterSimulatorTests.cpp  WaterSimulatorTests.hpp  WaterSimulatorTestsOptimized.cpp
Src/World/: BulletPhysics.cpp  BulletPhysics.hpp  Clipping.cpp  Clipping.hpp  (+25 more)
(+349 files in other folders)
